fixed body overflow

--- a/main.css
+++ b/main.css
@@ -7,10 +7,6 @@
     font-family: 'Fustat', Helvetica, sans-serif;
 }
 
-body {
-    overflow: hidden;
-}
-
 h1 {
     font-family: 'Baumans', sans-serif;
     font-size: 32px;
